<resources>
    <string name="app_name">XMiTools</string>

    <string name="xposed_description">MIUI 10/ MIUI 11/MIUI 12 Module</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="pref_general_title">General</string>

    <string name="pref_module_instruction_title">Activation Statement</string>
    <string name="pref_module_instruction_summary">Reboot or restart host apps to activate it</string>
    <string name="pref_main_switch_title">Main switch</string>

    <string name="pref_status_bar_title">Status Bar</string>
    <string name="pref_show_sec_in_status_bar_title">Show seconds</string>
    <string name="pref_show_sec_in_status_bar_summary">Show seconds in status bar</string>
    <string name="pref_status_bar_clock_alignment_title">Clock alignment</string>
    <string name="alignment_left_entry">Left</string>
    <string name="alignment_center_entry">Center</string>
    <string name="alignment_right_entry">Right</string>
    <string name="pref_status_bar_clock_color_enable_title">Custom clock color</string>
    <string name="clock_color">Clock color</string>
    <string name="date_color">Date color</string>
    <string name="pref_status_bar_clock_format_enable_title">Custom clock time format</string>
    <string name="pref_status_bar_clock_format_title">Clock time format</string>
    <string name="pref_status_bar_clock_format_message"> </string>
    <string name="pref_status_bar_signal_align_left_title">Signals Align Left</string>
    <string name="pref_status_bar_dual_mobile_signal_title">Dual Mobile Signal</string>
    <string name="pref_status_bar_hide_vpn_icon_title">Hide VPN Icon</string>
    <string name="pref_status_bar_hide_hd_icon_title">Hide HD Icon</string>
    <string name="pref_status_bar_show_small_battery_percent_sign_title">Show small battery percent sign</string>
    <string name="pref_custom_mobile_network_type_enable_title">Custom Mobile Network Type</string>
    <string name="pref_custom_mobile_network_type_enable_summary">Custom displayed mobile network type</string>
    <string name="pref_custom_mobile_network_type_title">Displayed Mobile Network Type</string>

    <string name="pref_dropdown_status_bar_title">Dropdown Status Bar</string>
    <string name="pref_show_sec_in_dropdown_status_bar_title">Show seconds</string>
    <string name="pref_show_sec_in_dropdown_status_bar_summary">Show seconds in dropdown status bar</string>
    <string name="pref_dropdown_status_bar_weather_enable_title">Show weather info</string>
    <string name="no_weather_info">No weather info</string>
    <string name="miui_weather_enable_prompt">Miui weather disabled</string>
    <string name="miui_weather_install_prompt">Miui weather not exists</string>
    <string name="pref_dropdown_status_bar_weather_text_color_title">Weather text color</string>
    <string name="pref_dropdown_status_bar_weather_text_size_title">Weather text size</string>

    <string name="pref_keyguard_title">Lock Screen</string>
    <string name="pref_show_sec_in_keyguard_horizontal_title">Show seconds in horizontal clock</string>
    <string name="pref_show_sec_in_keyguard_horizontal_summary">Only applicable to system default theme</string>
    <string name="pref_show_sec_in_keyguard_vertical_title">Show seconds in vertical clock</string>
    <string name="pref_show_sec_in_keyguard_vertical_summary">Only applicable to system default theme</string>

    <string name="miui_launcher">MIUI Launcher</string>
    <string name="pref_always_show_status_bar_clock_title">Don\'t hide clock</string>
    <string name="pref_always_show_status_bar_clock_summary">Don\'t hide status bar clock in pages contains clock widget</string>

    <string name="pref_other_title">Others</string>
    <string name="pref_hide_launcher_icon_title">Hide launcher icon</string>
    <string name="pref_hide_launcher_icon_summary">It can be reopen in Xposed modules list</string>

    <string name="pref_about_title">About</string>
    <string name="pref_module_status_title">Activation state</string>
    <string name="module_status_inactive">Inactive</string>
    <string name="module_status_active">Active</string>
    <string name="version_title">Version</string>
    <string name="pref_source_code_title">Source code</string>
    <string name="pref_source_code_summary">Welcome to star</string>
    <string name="browser_install_or_enable_prompt">Please install or enable browser</string>
    <string name="prompt_join_qq_group_failed">Please install or enable QQ first</string>
    <string name="pref_join_qq_group_title">Communication and Bug report</string>
    <string name="pref_join_qq_group_summary">QQ group: 1018488571</string>
    <string name="pref_donate_by_alipay_title">Donate by Alipay</string>
    <string name="alipay_install_prompt">Please install Alipay</string>
    <string name="alipay_enable_prompt">Please enable Alipay</string>
    <string name="pref_donate_by_alipay_summary">I am kawaii, plz donate to me (.❛ ᴗ ❛.)</string>

    <string name="action_reboot_system">Reboot</string>
    <string name="prompt_reboot_system_message">Are you sure to reboot System?</string>
    <string name="action_soft_reboot_system">Soft Reboot</string>
    <string name="prompt_soft_reboot_message">Are you sure to soft reboot System?</string>
    <string name="action_restart_host_apps">Restart Host Apps</string>
    <string name="prompt_restart_host_apps_message">Are you sure to restart SystemUI?</string>
    <string name="action_taichi_users_notice">Taichi Users Notice</string>
    <string name="prompt_taichi_users_notice_message">1.This module should run under the Taichi Magisk.\n\n2. These apps should be added to Taichi before use it：\n\t· SystemUI(com.android.systemui)\n\n3. If this module inactive after upgrading, please recheck this module in Taichi module manage list and reboot system or restart host Apps.</string>
    <string name="add_applications">Add Apps</string>
    <string name="check_module">Enable Module</string>
    <string name="taichi_install_prompt">Please install Taichi</string>
    <string name="taichi_enable_prompt">Please enable Taichi</string>

    <!-- edxposed users notice -->
    <string name="action_edxposed_users_notice">EdXposed Users Notice</string>
    <string name="edxposed_users_notice_content">1. This module should hook these apps：\n\t· Phone Services(com.android.phone)\n\n2. If this module is inactive after updating, please re-check this module in module manager list and reboot. \n\n3. If it cannot work in global mode, then try to change to whitelist(Xposed Hide White) mode or scope mode and add the apps above.</string>
    <!-- edxposed users notice end -->

    <string-array name="api_source_value_array">
        <item>Hitokoto</item>
        <item>DailyPoem</item>
    </string-array>

    <string-array name="hitokoto_type_category_value_array">
        <item>All</item>
        <item>Animation</item>
        <item>Comic</item>
        <item>Game</item>
        <item>Literature</item>
        <item>Creative Work</item>
        <item>Internet</item>
        <item>Film &amp; Drama</item>
        <item>Poem</item>
        <item>Netease Cloud</item>
        <item>Philosophy</item>
        <item>Joke</item>
        <item>Others</item>
    </string-array>

    <string-array name="one_poem_category_value_array">
        <item>All</item>
        <item>Lyrical</item>
        <item>Seasons</item>
        <item>Landscape</item>
        <item>Weather</item>
        <item>Character</item>
        <item>Life</item>
        <item>Daily Life</item>
        <item>Festivals</item>
        <item>Animals</item>
        <item>Plants</item>
        <item>Foods</item>
    </string-array>

    <!-- 一言刷新频率 -->
    <string name="refresh_rate_0_min_entry">Right Now</string>
    <string name="refresh_rate_1_min_entry">Every 1 minute</string>
    <string name="refresh_rate_5_min_entry">Every 5 minutes</string>
    <string name="refresh_rate_20_min_entry">Every 20 minutes</string>
    <string name="refresh_rate_30_min_entry">Every 30 minutes</string>
    <string name="refresh_rate_1_hour_entry">Every 1 hour</string>
    <string name="refresh_rate_3_hour_entry">Every 3 hours</string>
    <string name="refresh_rate_6_hour_entry">Every 6 hours</string>
    <string name="refresh_rate_24_hour_entry">Every 24 hours</string>
    <!-- 一言刷新频率 end -->

    <!-- 锁屏一言 -->
    <string name="pref_category_title_hitokoto">Hitokoto</string>
    <string name="pref_one_sentence_enable_title">One Sentence</string>
    <string name="pref_one_sentence_enable_summary">Only support system default lock-screen</string>
    <string name="pref_one_sentence_settings_title">One Sentence Settings</string>
    <string name="dialog_api_source">API Source</string>
    <string name="dialog_hitokoto_category">Hitokoto Category</string>
    <string name="dialog_one_poem_category">One Poem Category</string>
    <string name="dialog_show_poem_author">Show Poem Author</string>
    <string name="dialog_show_source">Show the source of the work</string>
    <string name="pref_one_sentence_refresh_rate_title">One Sentence Refresh Rate</string>
    <string name="pref_one_sentence_color_title">One Sentence Color</string>
    <string name="pref_one_sentence_text_size_title">One Sentence Text Size</string>
    <!-- 锁屏一言 End -->
</resources>
